--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.6"
+        "php": ">=7",
+        "phpunit/phpunit": "5.4.*"
     },
     "autoload": {
         "psr-4": {
